--- a/book.html
+++ b/book.html
@@ -47,7 +47,7 @@
                 <!--/. navbar -->
             </header>
             <!--/. HEADER END -->
-            <!-- advantage BEGIN -->
+            <!-- Book content BEGIN -->
             <section id="book_content">
                 <div class="skewed-bg">
                     <div class="container">
@@ -84,7 +84,10 @@
                     </div>
                 </div>
             </section>
-            <!--/. advantage END -->
+            <!--/. Book content END -->
+
+            <!-- Book guide BEGIN -->
+
             <section id="book_guide">
                 <div class="skewed-bg ">
                     <div class="container">
@@ -129,6 +132,7 @@
                     </div>
                 </div>
             </section>
+            <!--/. Book guide END -->
 
             <footer id="footer">
                 <div class="skewed-bg">
