--- a/bookList.html
+++ b/bookList.html
@@ -47,7 +47,7 @@
                 <!--/. navbar -->
             </header>
             <!--/. HEADER END -->
-            <!-- advantage BEGIN -->
+            <!-- Book list BEGIN -->
             <section id="book_list">
                 <div class="skewed-bg">
 
@@ -219,7 +219,7 @@
                     </div>
                 </div>
             </section>
-            <!--/. advantage END -->
+            <!--/. Book list END -->
             <footer id="footer">
                 <div class="skewed-bg">
                     <div class="container">
